font style changed

--- a/Bootstrap-1/style.css
+++ b/Bootstrap-1/style.css
@@ -1,6 +1,7 @@
 body{
 background: url(coffee-blue.jpg) no-repeat center center fixed;
 background-size: cover;
+font-family: 'Rozha One', serif;
 }
 
 .hero{
