--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   background: url(bg.jpeg) no-repeat center center fixed;
   background-size: cover;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Rozha One', serif;
 }
 .rowHeight{
   height: 200px;
