--- a/MyWebsite/css/style.css
+++ b/MyWebsite/css/style.css
@@ -5,13 +5,26 @@
 }
 .navbar{
   margin-bottom: 0px;
+  background-color: #722872 !important;
+  padding:10px;
+  border-color: #592059;
+  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  left: 0px;
+  right:0px;
+}
+.bg-warning{
+  background-color: #722872 !important;
+  padding:10px;
+  border-color: #592059;
+  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .expertise, .experience{
-  background-color: #ddd;
+  background-color: #888;
 }
 .jumbotron{
+  //background-color: #ccc;
   margin-bottom: 0px;
 }
 .skills{
-  
+
 }
